--- a/styles/main.scss
+++ b/styles/main.scss
@@ -18,7 +18,7 @@ body{
 .side-nav{
 	float: left;
 	background-color: #550000;
-	color: #ffaaaa;
+	color: black;
 	margin: 0;
 	width: 15%;
 	padding: 14em 0;
@@ -28,13 +28,17 @@ body{
 
 .side-nav-button{
 	width:80%;
+	background-color: #ffaaaa;
 	border: solid 1px black;
 	height: 2em;
 	margin: 1em auto;
 	font-size: 1.5em;
 	text-align: center;
-	box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+	// box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 
+}
+.side-nav-button:hover{
+	box-shadow: 2px 2px 2px 1px black;
 }
 .display-container{
 	padding: 5em;
