--- a/styles/main.scss
+++ b/styles/main.scss
@@ -40,6 +40,9 @@ body{
 .side-nav-button:hover{
 	box-shadow: 2px 2px 2px 1px black;
 }
+.clicked{
+	background-color: #d46a6a;
+}
 .display-container{
 	padding: 5em;
 	float: left;
