Explorer Mode with ugly colors and bad coding

--- a/styles/main.css
+++ b/styles/main.css
@@ -56,7 +56,8 @@ body {
   width: 25%;
   margin: 2em 2em;
   height: 20em;
-  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2); }
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  background-color: #d46a6a; }
   .item-display .item-display-image {
     width: 100%;
     max-height: 75%; }
@@ -89,7 +90,6 @@ body {
     text-align: center; }
   .image-display .image-display-image-box {
     width: 100%;
-    max-height: 40em;
     margin: 0px auto;
     box-shadow: 2px 2px 2px 1px #550000; }
 
